# core_tests

./: .gitignore  README.md  tests.toml
chat/: Cargo.toml  metadata.json
chat/chat/: Cargo.toml
chat/chat/src/: lib.rs
chat/pkg/: manifest.json  metadata.json
chat/send/: Cargo.toml
chat/send/src/: lib.rs
chat/src/: lib.rs
chat_test/: Cargo.toml  metadata.json
chat_test/chat_test/: Cargo.toml
chat_test/chat_test/src/: lib.rs
chat_test/pkg/: manifest.json  metadata.json
chat_test/src/: lib.rs
key_value_test/: Cargo.toml  metadata.json
key_value_test/api/: key_value_test:template.os-v0.wit
key_value_test/key_value_test/: Cargo.toml
key_value_test/key_value_test/src/: lib.rs  tester_types.rs
key_value_test/pkg/: key_value_test.wasm  manifest.json  metadata.json  sqlite_test.wasm
key_value_test/src/: lib.rs
sqlite_test/: Cargo.toml  metadata.json
sqlite_test/api/: sqlite_test:template.os-v0.wit
sqlite_test/pkg/: manifest.json  metadata.json  sqlite_test.wasm
sqlite_test/sqlite_test/: Cargo.toml
sqlite_test/sqlite_test/src/: lib.rs
sqlite_test/src/: lib.rs  sqlite_types.rs
